// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receipts > renders a 58mm GST receipt with split and payment details 1`] = `
"<1B><40><1B><61><01><1B><45><01><1D><21><01>ForkFlow Cafe
<1D><21><00><1B><45><00>12 Market Road
GSTIN: 29ABCDE1234F1Z5
FSSAI: 12345678901234
--------------------------------
<1B><45><01>RESTAURANT BILL
<1B><45><00><1B><61><00>Bill #42                    PAID
28 Sept 2026, 13:30
DINE-IN: T1 / B
--------------------------------
<1B><45><01>ITEM / QTY x RATE         AMOUNT
<1B><45><00>All amounts in Rs.
--------------------------------
<1B><45><01>1. Meal
<1B><45><00>2 x 100.00                200.00
--------------------------------
Items: 1                  Qty: 2
Subtotal                  200.00
GST added to menu prices
Taxable @ 5%              200.00
CGST @ 2.5%                 5.00
SGST @ 2.5%                 5.00
Round off                   0.00
--------------------------------
<1B><45><01><1D><21><01>TOTAL Rs.                 210.00
<1D><21><00><1B><45><00>--------------------------------
<1B><45><01>PAYMENT DETAILS
<1B><45><00>CASH                      100.00
UPI                       110.00
<1B><45><01>PAID IN FULL
<1B><45><00>--------------------------------
<1B><61><01>Thank you!
<1B><64><03><1D><56><42><00>"
`;

exports[`receipts > renders a 80mm GST receipt with split and payment details 1`] = `
"<1B><40><1B><61><01><1B><45><01><1D><21><01>ForkFlow Cafe
<1D><21><00><1B><45><00>12 Market Road
GSTIN: 29ABCDE1234F1Z5
FSSAI: 12345678901234
------------------------------------------------
<1B><45><01>RESTAURANT BILL
<1B><45><00><1B><61><00>Bill #42                                    PAID
28 Sept 2026, 13:30
DINE-IN: T1 / B
------------------------------------------------
<1B><45><01>ITEM / QTY x RATE                         AMOUNT
<1B><45><00>All amounts in Rs.
------------------------------------------------
<1B><45><01>1. Meal
<1B><45><00>2 x 100.00                                200.00
------------------------------------------------
Items: 1                                  Qty: 2
Subtotal                                  200.00
GST added to menu prices
Taxable @ 5%                              200.00
CGST @ 2.5%                                 5.00
SGST @ 2.5%                                 5.00
Round off                                   0.00
------------------------------------------------
<1B><45><01><1D><21><01>TOTAL Rs.                                 210.00
<1D><21><00><1B><45><00>------------------------------------------------
<1B><45><01>PAYMENT DETAILS
<1B><45><00>CASH                                      100.00
UPI                                       110.00
<1B><45><01>PAID IN FULL
<1B><45><00>------------------------------------------------
<1B><61><01>Thank you!
<1B><64><03><1D><56><42><00>"
`;
